--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,4 +43,5 @@ jobs:
     #     run: "pip install -r ./main/project/requirements.txt"
 
       - name: Run Test Script
-        run: "./main/project/tests.sh"
+        working-directory: ./main/project
+        run: "tests.sh"
