--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,4 +44,4 @@ jobs:
 
       - name: Run Test Script
         working-directory: ./main/project
-        run: "tests.sh"
+        run: "./tests.sh"
